# Financial-Models-Numerical-Methods

./: 3.2 Variance Gamma model, PIDE method.ipynb  README.md  justfile  pyproject.toml
docs/: my-experience-with-marimo-part2.5.md
marimo-experience/: 1.1 Black-Scholes numerical methods.md  1.1 Black-Scholes numerical methods.py  1.2 SDE simulations and statistics.py
marimo-experience/__marimo__/: 1.1 Black-Scholes numerical methods.ipynb
src/FMNM/: BS_pricer.py  Heston_pricer.py  Kalman_filter.py  Merton_pricer.py  NIG_pricer.py  VG_pricer.py
