[build-system]
requires = ["setuptools", "setuptools-scm", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "FMNM"
version = "1.0.0"
authors = [{ name = "cantaro86", email = "nicolacantarutti@gmail.com" }]
description = "Library for the code used in the FMNM notebooks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "arch>=5.6.0",
    "cvxpy>=1.5.4",
    "cython>=3.1.0",
    "jupyter>=1.1.1",
    "marimo>=0.8.22",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "sympy>=1.13.3",
]

[project.urls]
Homepage = "https://github.com/cantaro86/Financial-Models-Numerical-Methods"
